feat: change generic files to Transmission Chart

--- a/transmission/templates/deployment.yaml
+++ b/transmission/templates/deployment.yaml
@@ -17,6 +17,7 @@ spec:
       annotations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      name: {{ include "transmission.fullname" . }}
       labels:
         {{- include "transmission.selectorLabels" . | nindent 8 }}
     spec:
@@ -27,6 +28,9 @@ spec:
       serviceAccountName: {{ include "transmission.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- if .Values.nodeName }}
+      nodeName: {{ .Values.nodeName }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -34,28 +38,63 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: http
-              containerPort: 80
+            - name: ui
+              containerPort: 9091
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+            - name: tcp
+              containerPort: 51413
+              protocol: TCP
+            - name: udp
+              containerPort: 51413
+              protocol: UDP
+          volumeMounts:
+            - mountPath: /downloads
+              name: downloads-volume
+            - mountPath: /config
+              name: config-volume
+            - mountPath: /watch
+              name: watch-volume
+          env:
+            - name: PUID
+              value: "{{ .Values.env.puid }}"
+            - name: PGID
+              value: "{{ .Values.env.pgid }}"
+            - name: TZ
+              value: "{{ .Values.env.tz }}"
+            - name: USER
+              value: "{{ .Values.env.user }}"
+            {{- if .Values.secrets.use }}
+            - name: PASS
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.secrets.name }}
+                  key: {{ .Values.secrets.key }}
+            {{- else}}
+            - name: PASS
+              value: "{{ randAlphaNum 20 | b64enc }}"
+            {{- end}}
+      volumes:
+        {{- if .Values.volumes.config.useHostPath }}
+        - name: config-volume
+          hostPath:
+            path: {{ .Values.volumes.config.hostPath }}
+            type: DirectoryOrCreate
+        {{- else if .Values.volumes.config.usePVC }}
+        - name: config-volume
+          persistentVolumeClaim:
+            claimName: {{ .Values.volumes.config.claimName }}
+        {{- end }}
+        - name: downloads-volume
+          hostPath:
+            path: {{ .Values.volumes.downloads}}
+            type: DirectoryOrCreate
+        - name: watch-volume
+          hostPath:
+            path: {{ .Values.volumes.watch}}
+            type: DirectoryOrCreate
+      resources:
+        {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.affinity }}
-      affinity:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.tolerations }}
-      tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
